--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ DB_PASSWORD_ORA=ptpk6615
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
