--- a/.env
+++ b/.env
@@ -13,12 +13,12 @@ DB_DATABASE=docupro
 DB_USERNAME=root
 DB_PASSWORD=
 
-DB_CONNECTION_SPP=mysql
-DB_HOST_SPP=127.0.0.1
-DB_PORT_SPP=3306
-DB_DATABASE_SPP=export@SPP3
-DB_USERNAME_SPP=root
-DB_PASSWORD_SPP=
+DB_CONNECTION_SPP=oracle
+DB_HOST_SPP=192.168.10.4
+DB_PORT_SPP=1521
+DB_DATABASE_SPP=TPK
+DB_USERNAME_SPP=spp
+DB_PASSWORD_SPP=spp
 
 
 DB_HOST_ORA=192.168.10.16
